Import revised translations.  DO NOT MERGE
Change-Id: I512bfadfc427f0676bce9e79c20babe006324ca1

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -204,7 +204,7 @@
     <string name="device_info_label" msgid="6551553813651711205">"Geräteinfo"</string>
     <string name="battery_info_label" msgid="4132685016148679403">"Akkuinfo"</string>
     <string name="display_label" msgid="7403874003169865762">"Display"</string>
-    <string name="phone_info_label" msgid="2127552523124277664">"Telefoninfo"</string>
+    <string name="phone_info_label" msgid="2127552523124277664">"Über das Telefon"</string>
     <string name="sd_card_settings_label" product="nosdcard" msgid="8101475181301178428">"USB-Speicher"</string>
     <string name="sd_card_settings_label" product="default" msgid="5743100901106177102">"SD-Karte"</string>
     <string name="proxy_settings_label" msgid="3271174136184391743">"Proxy-Einstellungen"</string>
@@ -439,11 +439,11 @@
     <string name="dtmf_tone_enable_summary_on" msgid="3028201873989887327">"Töne bei Telefonwahl"</string>
     <string name="dtmf_tone_enable_summary_off" msgid="7791065951268525678">"Töne bei Telefonwahl"</string>
     <string name="sound_effects_enable_title" msgid="3197313718929122833">"Akustische Auswahl"</string>
-    <string name="sound_effects_enable_summary_on" msgid="6154141289879491329">"Ton bei Auswahl auf Bildschirm"</string>
-    <string name="sound_effects_enable_summary_off" msgid="3447739581759560125">"Ton bei Auswahl auf Bildschirm"</string>
+    <string name="sound_effects_enable_summary_on" msgid="6154141289879491329">"Ton bei Auswahl auf Display"</string>
+    <string name="sound_effects_enable_summary_off" msgid="3447739581759560125">"Ton bei Auswahl auf Display"</string>
     <string name="lock_sounds_enable_title" msgid="1575990840389107141">"Display-Sperre"</string>
-    <string name="lock_sounds_enable_summary_on" msgid="145741024028391473">"Ton beim Sperren und Entsperren des Bildschirms"</string>
-    <string name="lock_sounds_enable_summary_off" msgid="8481243116223542804">"Ton beim Sperren und Entsperren des Bildschirms"</string>
+    <string name="lock_sounds_enable_summary_on" msgid="145741024028391473">"Ton beim Sperren und Entsperren des Displays"</string>
+    <string name="lock_sounds_enable_summary_off" msgid="8481243116223542804">"Ton beim Sperren und Entsperren des Displays"</string>
     <string name="haptic_feedback_enable_title" msgid="6311736559245411290">"Haptisches Feedback"</string>
     <string name="haptic_feedback_enable_summary_on" msgid="1875779656524793053">"Vibration beim Drücken von Softkeys und bei bestimmten UI-Interaktionen"</string>
     <string name="haptic_feedback_enable_summary_off" msgid="7287885436963105314">"Vibration beim Drücken von Softkeys und bei bestimmten UI-Interaktionen"</string>
@@ -584,6 +584,7 @@
     <string name="apn_auth_type_chap" msgid="3369626283789068360">"CHAP"</string>
     <string name="apn_auth_type_pap_chap" msgid="9102343063036134541">"PAP oder CHAP"</string>
     <string name="apn_type" msgid="469613123902220544">"APN-Typ"</string>
+    <string name="apn_protocol" msgid="3272222921649348640">"APN-Protokoll"</string>
     <string name="menu_delete" msgid="6981294422841124659">"APN löschen"</string>
     <string name="menu_new" msgid="3014205883303921729">"Neuer APN"</string>
     <string name="menu_save" msgid="8109345640668285399">"Speichern"</string>
@@ -652,7 +653,7 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Unterstütztes GPS verwenden"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Server zur Unterstützung von GPS verwenden (zur Verringerung der Netzwerkauslastung nicht auswählen)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Server zur Unterstützung von GPS verwenden (zur Verbesserung der GPS-Leistung deaktivieren)"</string>
-    <string name="about_settings" msgid="1743378368185371685">"Telefoninfo"</string>
+    <string name="about_settings" msgid="1743378368185371685">"Über das Telefon"</string>
     <string name="about_settings_summary" msgid="3302263393543848667">"Rechtliche Hinweise, Telefonstatus und Softwareversion anzeigen"</string>
     <string name="legal_information" msgid="5769301644270604095">"Rechtliche Hinweise"</string>
     <string name="contributors_title" msgid="5917703088825286504">"Mitwirkende"</string>
@@ -741,7 +742,7 @@
     <string name="sort_order_alpha" msgid="1410278099123670628">"Nach Namen sortieren"</string>
     <string name="sort_order_size" msgid="7024513286636502362">"Nach Größe sortieren"</string>
     <string name="show_running_services" msgid="5736278767975544570">"Aktive Dienste anzeigen"</string>
-    <string name="show_background_processes" msgid="2009840211972293429">"Prozesse im Cache anz."</string>
+    <string name="show_background_processes" msgid="2009840211972293429">"Prozesse im Cache anzeigen"</string>
     <string name="manage_space_text" msgid="8852711522447794676">"Speicherplatz verwalten"</string>
     <string name="filter" msgid="2018011724373033887">"Filter"</string>
     <string name="filter_dlg_title" msgid="6507663329723966854">"Filteroptionen auswählen"</string>
@@ -1159,4 +1160,7 @@
     <string name="sound_category_calls_title" msgid="3688531959256239012">"Eingehende Anrufe"</string>
     <string name="sound_category_notification_title" msgid="3502115998790286943">"Benachrichtigungen"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"Feedback"</string>
+    <string name="wimax_settings" msgid="1574837328738396794">"4G-Einstellungen"</string>
+    <string name="wimax_settings_summary" msgid="3207355006084135453">"4G-Netzwerk einrichten &amp; verwalten"</string>
+    <string name="status_wimax_mac_address" msgid="8390791848661413416">"4G-MAC-Adresse"</string>
 </resources>
