--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -240,18 +240,18 @@
     <string name="date_time_date_format" msgid="436706100255870967">"Seleziona formato data"</string>
     <string name="zone_list_menu_sort_alphabetically" msgid="5683377702671088588">"Ordine alfabetico"</string>
     <string name="zone_list_menu_sort_by_timezone" msgid="2720190443744884114">"Ordina per fuso orario"</string>
-    <string name="security_settings_title" msgid="5168491784222013179">"Posizione e protezione"</string>
-    <string name="location_security_settings_title" msgid="4624434296446625554">"Impostazioni di posizione e protezione"</string>
+    <string name="security_settings_title" msgid="5168491784222013179">"Posizione e sicurezza"</string>
+    <string name="location_security_settings_title" msgid="4624434296446625554">"Impostazioni di posizione e sicurezza"</string>
     <string name="security_settings_summary" msgid="967393342537986570">"Imposta La mia posizione, sblocco schermo, blocco SIM, blocco cred."</string>
     <string name="cdma_security_settings_summary" msgid="6068799952798901542">"Imposta La mia posizione, sblocco schermo, blocco archivio credenziali"</string>
     <string name="security_passwords_title" msgid="2930627259125138363">"Password"</string>
-    <string name="lock_settings_picker_title" msgid="3973555216065628262">"Protezione sblocco schermo"</string>
+    <string name="lock_settings_picker_title" msgid="3973555216065628262">"Sicurezza sblocco schermo"</string>
     <string name="unlock_set_unlock_launch_picker_title" msgid="1129684221223017902">"Imposta blocco schermo"</string>
     <string name="unlock_set_unlock_launch_picker_summary" msgid="1667332113134720845">"Blocca schermo con sequenza, PIN o password"</string>
     <string name="unlock_set_unlock_launch_picker_change_title" msgid="6987228635944678726">"Cambia blocco schermo"</string>
     <string name="unlock_set_unlock_launch_picker_change_summary" msgid="2790960639554590668">"Cambia o disattiva protez. tramite sequenza, PIN o password"</string>
     <string name="unlock_set_unlock_none_title" msgid="3760684669884671990">"Nessuna"</string>
-    <string name="unlock_set_unlock_none_summary" msgid="2658550480388272618">"Disattiva protez. sblocco schermo"</string>
+    <string name="unlock_set_unlock_none_summary" msgid="2658550480388272618">"Disattiva sicurezza sblocco schermo"</string>
     <string name="unlock_set_unlock_pattern_title" msgid="2912067603917311700">"Sequenza"</string>
     <string name="unlock_set_unlock_pattern_summary" msgid="3018395214738645405">"Inserisci sequenza per sbloccare schermo"</string>
     <string name="unlock_set_unlock_pin_title" msgid="5846029709462329515">"PIN"</string>
@@ -356,7 +356,7 @@
     <string name="wifi_menu_forget" msgid="8736964302477327114">"Elimina rete"</string>
     <string name="wifi_menu_modify" msgid="2068554918652440105">"Modifica rete"</string>
     <string name="wifi_ssid" msgid="641393708309146745">"SSID rete"</string>
-    <string name="wifi_security" msgid="6603611185592956936">"Protezione"</string>
+    <string name="wifi_security" msgid="6603611185592956936">"Sicurezza"</string>
     <string name="wifi_signal" msgid="5514120261628065287">"Intensità segnale"</string>
     <string name="wifi_status" msgid="4824568012414605414">"Stato"</string>
     <string name="wifi_speed" msgid="3526198708812322037">"Velocità di collegamento"</string>
@@ -584,6 +584,7 @@
     <string name="apn_auth_type_chap" msgid="3369626283789068360">"CHAP"</string>
     <string name="apn_auth_type_pap_chap" msgid="9102343063036134541">"PAP o CHAP"</string>
     <string name="apn_type" msgid="469613123902220544">"Tipo APN"</string>
+    <string name="apn_protocol" msgid="3272222921649348640">"Protocollo APN"</string>
     <string name="menu_delete" msgid="6981294422841124659">"Elimina APN"</string>
     <string name="menu_new" msgid="3014205883303921729">"Nuovo APN"</string>
     <string name="menu_save" msgid="8109345640668285399">"Salva"</string>
@@ -889,16 +890,16 @@
     <string name="app_name_label" msgid="2000949925256858308">"Applicazione"</string>
     <string name="launch_count_label" msgid="4019444833263957024">"Conteggio"</string>
     <string name="usage_time_label" msgid="295954901452833058">"Tempo di utilizzo"</string>
-    <string name="accessibility_settings" msgid="3975902491934816215">"Accesso facilitato"</string>
-    <string name="accessibility_settings_title" msgid="2130492524656204459">"Impostazioni di accesso facilitato"</string>
-    <string name="accessibility_settings_summary" msgid="8185181964847149507">"Gestisci opzioni di accesso facilitato"</string>
-    <string name="toggle_accessibility_title" msgid="650839277066574497">"Accesso facilitato"</string>
-    <string name="accessibility_services_category" msgid="8127851026323672607">"Servizi di accesso facilitato"</string>
-    <string name="no_accessibility_services_summary" msgid="694578333333808159">"Nessun servizio di accesso facilitato installato."</string>
-    <string name="accessibility_service_security_warning" msgid="4066258132331302670">"Questo servizio di accesso facilitato potrebbe riuscire a raccogliere tutto il testo digitato, compresi i numeri di carte di credito ma eccetto le password. Potrebbe anche registrare le tue interazioni con l\'interfaccia utente. Deriva dall\'applicazione <xliff:g id="ACCESSIBILITY_SERVICE_NAME">%1$s</xliff:g>. Utilizzare questo servizio di accesso facilitato?"</string>
-    <string name="accessibility_service_disable_warning" msgid="8930591383312775132">"Disattivare accesso facilitato?"</string>
-    <string name="accessibility_service_no_apps_title" msgid="898893674114288531">"Nessuna applicazione di accesso facilitato trovata"</string>
-    <string name="accessibility_service_no_apps_message" msgid="2450056749545404807">"Nessuna applicazione di accesso facilitato installata."\n\n"Puoi scaricare uno screen reader per il tuo dispositivo da Android Market."\n\n"Fai clic su OK per installare lo screen reader."</string>
+    <string name="accessibility_settings" msgid="3975902491934816215">"Accessibilità"</string>
+    <string name="accessibility_settings_title" msgid="2130492524656204459">"Impostazioni di accessibilità"</string>
+    <string name="accessibility_settings_summary" msgid="8185181964847149507">"Gestisci opzioni di accessibilità"</string>
+    <string name="toggle_accessibility_title" msgid="650839277066574497">"Accessibilità"</string>
+    <string name="accessibility_services_category" msgid="8127851026323672607">"Servizi di accessibilità"</string>
+    <string name="no_accessibility_services_summary" msgid="694578333333808159">"Nessun servizio di accessibilità installato."</string>
+    <string name="accessibility_service_security_warning" msgid="4066258132331302670">"Questo servizio di accessibilità potrebbe riuscire a raccogliere tutto il testo digitato, compresi i numeri di carte di credito ma eccetto le password. Potrebbe anche registrare le tue interazioni con l\'interfaccia utente. Deriva dall\'applicazione <xliff:g id="ACCESSIBILITY_SERVICE_NAME">%1$s</xliff:g>. Utilizzare questo servizio?"</string>
+    <string name="accessibility_service_disable_warning" msgid="8930591383312775132">"Disattivare accessibilità?"</string>
+    <string name="accessibility_service_no_apps_title" msgid="898893674114288531">"Nessuna applicazione di accessibilità trovata"</string>
+    <string name="accessibility_service_no_apps_message" msgid="2450056749545404807">"Nessuna applicazione di accessibilità installata."\n\n"Puoi scaricare uno screen reader per il tuo dispositivo da Android Market."\n\n"Fai clic su OK per installare lo screen reader."</string>
     <string name="accessibility_power_button_category" msgid="8545885236482339928">"Pulsante di accensione"</string>
     <string name="accessibility_power_button_ends_call" msgid="7698764194501089533">"Termina chiamata"</string>
     <string name="accessibility_power_button_ends_call_summary" msgid="8878097632186291462">"Durante una chiamata, la pressione del pulsante di accensione termina la chiamata invece di spegnere lo schermo"</string>
@@ -1159,4 +1160,7 @@
     <string name="sound_category_calls_title" msgid="3688531959256239012">"Chiamate in arrivo"</string>
     <string name="sound_category_notification_title" msgid="3502115998790286943">"Notifiche"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"Commenti"</string>
+    <string name="wimax_settings" msgid="1574837328738396794">"Impostazioni 4G"</string>
+    <string name="wimax_settings_summary" msgid="3207355006084135453">"Imposta e gestisci rete e modem 4G"</string>
+    <string name="status_wimax_mac_address" msgid="8390791848661413416">"Indirizzo MAC 4G"</string>
 </resources>
