--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -584,6 +584,7 @@
     <string name="apn_auth_type_chap" msgid="3369626283789068360">"CHAP"</string>
     <string name="apn_auth_type_pap_chap" msgid="9102343063036134541">"PAPまたはCHAP"</string>
     <string name="apn_type" msgid="469613123902220544">"APNタイプ"</string>
+    <string name="apn_protocol" msgid="3272222921649348640">"APNプロトコル"</string>
     <string name="menu_delete" msgid="6981294422841124659">"APNを削除"</string>
     <string name="menu_new" msgid="3014205883303921729">"新しいAPN"</string>
     <string name="menu_save" msgid="8109345640668285399">"保存"</string>
@@ -1159,4 +1160,7 @@
     <string name="sound_category_calls_title" msgid="3688531959256239012">"着信"</string>
     <string name="sound_category_notification_title" msgid="3502115998790286943">"通知"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"フィードバック"</string>
+    <string name="wimax_settings" msgid="1574837328738396794">"4G設定"</string>
+    <string name="wimax_settings_summary" msgid="3207355006084135453">"4Gネットワークとモデムの設定と管理"</string>
+    <string name="status_wimax_mac_address" msgid="8390791848661413416">"4G MACアドレス"</string>
 </resources>
