--- a/res/values-rm/strings.xml
+++ b/res/values-rm/strings.xml
@@ -338,7 +338,9 @@
     <skip />
     <!-- no translation found for nfc_quick_toggle_summary (1988408027741447231) -->
     <skip />
-    <string name="nfc_toggle_error" msgid="2233172102497535522">"Ina errur è succedida."</string>
+    <!-- no translation found for nfc_toggle_error (2233172102497535522) -->
+    <!-- no translation found for nfc_toggle_error (8998642457947607263) -->
+    <skip />
     <string name="wifi_quick_toggle_title" msgid="874495178395350104">"WLAN"</string>
     <string name="wifi_quick_toggle_summary" msgid="1047950931623694366">"Activar WLAN"</string>
     <string name="wifi_settings" msgid="4746946030627213196">"Parameters WLAN"</string>
@@ -587,6 +589,8 @@
     <string name="apn_auth_type_chap" msgid="3369626283789068360">"CHAP"</string>
     <string name="apn_auth_type_pap_chap" msgid="9102343063036134541">"PAP u CHAP"</string>
     <string name="apn_type" msgid="469613123902220544">"Tip dad APN (num dal punct d\'access)"</string>
+    <!-- no translation found for apn_protocol (3272222921649348640) -->
+    <skip />
     <string name="menu_delete" msgid="6981294422841124659">"Stizzar APN"</string>
     <string name="menu_new" msgid="3014205883303921729">"Nov APN"</string>
     <string name="menu_save" msgid="8109345640668285399">"Memorisar"</string>
@@ -1181,4 +1185,10 @@
     <string name="sound_category_calls_title" msgid="3688531959256239012">"Cloms entrants"</string>
     <string name="sound_category_notification_title" msgid="3502115998790286943">"Avis"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"Commentaris"</string>
+    <!-- no translation found for wimax_settings (1574837328738396794) -->
+    <skip />
+    <!-- no translation found for wimax_settings_summary (3207355006084135453) -->
+    <skip />
+    <!-- no translation found for status_wimax_mac_address (8390791848661413416) -->
+    <skip />
 </resources>
