--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -584,6 +584,7 @@
     <string name="apn_auth_type_chap" msgid="3369626283789068360">"CHAP"</string>
     <string name="apn_auth_type_pap_chap" msgid="9102343063036134541">"PAP sau CHAP"</string>
     <string name="apn_type" msgid="469613123902220544">"Tip APN"</string>
+    <string name="apn_protocol" msgid="3272222921649348640">"Protocol APN"</string>
     <string name="menu_delete" msgid="6981294422841124659">"Ştergeţi APN"</string>
     <string name="menu_new" msgid="3014205883303921729">"APN nou"</string>
     <string name="menu_save" msgid="8109345640668285399">"Salvaţi"</string>
@@ -1122,16 +1123,16 @@
     <string name="credentials_erased" msgid="7700309135582200849">"Stocarea acreditărilor este ştearsă."</string>
     <string name="credentials_enabled" msgid="7588607413349978930">"Stocarea acreditărilor este activată."</string>
     <string name="credentials_disabled" msgid="7453188089059045380">"Stocarea acreditărilor este dezactivată."</string>
-    <!-- outdated translation 5563670455056905298 -->     <string name="encrypted_fs_category" msgid="1841367653663913956">"Sistem de fişiere criptate"</string>
-    <!-- outdated translation 1460957282314335666 -->     <string name="encrypted_fs_enable" msgid="3884033081603327729">"Criptaţi datele private ale utilizatorului"</string>
-    <!-- outdated translation 1350828979802222331 -->     <string name="encrypted_fs_enable_summary" msgid="5635188119509076089">"Activaţi stocarea în sistemul de fişiere criptate pentru datele de utilizator private din acest dispozitiv"</string>
-    <!-- outdated translation 5616902699813992220 -->     <string name="encrypted_fs_enable_dialog" msgid="919487211207214266">"Activarea sistemelor de fişiere criptate presupune ştergerea datelor de pe un dispozitiv."</string>
-    <!-- outdated translation 6188718276152942357 -->     <string name="encrypted_fs_disable_dialog" msgid="6960413613985682501">"Dezactivarea Sistemelor de fişiere criptate necesită ştergerea datelor de pe un dispozitiv."</string>
-    <!-- outdated translation 5517966150893551199 -->     <string name="encrypted_fs_enable_button" msgid="8453841319751433751">"Activaţi"</string>
-    <!-- outdated translation 5723342350828112970 -->     <string name="encrypted_fs_disable_button" msgid="8468354944060220496">"Dezactivaţi"</string>
-    <!-- outdated translation 1629526807926334692 -->     <string name="encrypted_fs_cancel_button" msgid="4785921255266305799">"Anulaţi"</string>
-    <!-- outdated translation 7438020150015354683 -->     <string name="encrypted_fs_cancel_confirm" msgid="853572431153803557">"Modificarea efectuată în modul Sisteme de fişiere criptate a fost anulată."</string>
-    <!-- outdated translation 7428547491734194431 -->     <string name="encrypted_fs_alert_dialog_title" msgid="583462447886934755">"Avertisment Sisteme de fişiere criptate."</string>
+    <string name="encrypted_fs_category" msgid="1841367653663913956">"Sistem de fişiere criptate"</string>
+    <string name="encrypted_fs_enable" msgid="3884033081603327729">"Criptaţi datele private ale utilizatorului"</string>
+    <string name="encrypted_fs_enable_summary" msgid="5635188119509076089">"Activaţi stocarea în sistemul de fişiere criptate pentru datele de utilizator private din acest dispozitiv"</string>
+    <string name="encrypted_fs_enable_dialog" msgid="919487211207214266">"Activarea sistemelor de fişiere criptate presupune ştergerea datelor de pe dispozitiv."</string>
+    <string name="encrypted_fs_disable_dialog" msgid="6960413613985682501">"Dezactivarea Sistemelor de fişiere criptate necesită ştergerea datelor de pe un dispozitiv."</string>
+    <string name="encrypted_fs_enable_button" msgid="8453841319751433751">"Activaţi"</string>
+    <string name="encrypted_fs_disable_button" msgid="8468354944060220496">"Dezactivaţi"</string>
+    <string name="encrypted_fs_cancel_button" msgid="4785921255266305799">"Anulaţi"</string>
+    <string name="encrypted_fs_cancel_confirm" msgid="853572431153803557">"Modificarea efectuată în modul Sisteme de fişiere criptate a fost anulată."</string>
+    <string name="encrypted_fs_alert_dialog_title" msgid="583462447886934755">"Avertisment Sisteme de fişiere criptate."</string>
     <string name="emergency_tone_title" msgid="1055954530111587114">"Ton de urgenţă"</string>
     <string name="emergency_tone_summary" msgid="722259232924572153">"Setaţi comportamentul la efectuarea unui apel de urgenţă"</string>
     <string name="privacy_settings" msgid="9206631214140954954">"Confidenţialitate"</string>
@@ -1159,4 +1160,7 @@
     <string name="sound_category_calls_title" msgid="3688531959256239012">"Apeluri de intrare"</string>
     <string name="sound_category_notification_title" msgid="3502115998790286943">"Notificări"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"Feedback"</string>
+    <string name="wimax_settings" msgid="1574837328738396794">"Setări 4G"</string>
+    <string name="wimax_settings_summary" msgid="3207355006084135453">"Configuraţi &amp; gest. reţeaua 4G şi modemul"</string>
+    <string name="status_wimax_mac_address" msgid="8390791848661413416">"Adresă MAC 4G"</string>
 </resources>
