--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -294,7 +294,7 @@
     <string name="bluetooth_confirm_passkey_msg" msgid="1205362283945104263">"\"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>\" ile eşleştirmek için, şu passkey kodunu gösterdiğini doğrulayın: <xliff:g id="PASSKEY">%2$s</xliff:g>."</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1076613564387784476">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>"\n"eşleşme istiyor."</string>
     <string name="bluetooth_display_passkey_msg" msgid="3048496029389441579">"Eşleştirmek için \"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>\" cihazına <xliff:g id="PASSKEY">%2$s</xliff:g> kodunu girin."</string>
-    <string name="bluetooth_pairing_accept" msgid="6163520056536604875">"Çift"</string>
+    <string name="bluetooth_pairing_accept" msgid="6163520056536604875">"Eşleştir"</string>
     <string name="bluetooth_pairing_decline" msgid="930951069988011471">"Eşleştirme"</string>
     <string name="bluetooth_remote_device" msgid="2406662802908395389">"bluetooth cihazı"</string>
     <string name="bluetooth_error_title" msgid="538287072376677166">"Dikkat"</string>
@@ -584,6 +584,7 @@
     <string name="apn_auth_type_chap" msgid="3369626283789068360">"CHAP"</string>
     <string name="apn_auth_type_pap_chap" msgid="9102343063036134541">"PAP veya CHAP"</string>
     <string name="apn_type" msgid="469613123902220544">"APN türü"</string>
+    <string name="apn_protocol" msgid="3272222921649348640">"APN protokolü"</string>
     <string name="menu_delete" msgid="6981294422841124659">"APN\'yi sil"</string>
     <string name="menu_new" msgid="3014205883303921729">"Yeni APN"</string>
     <string name="menu_save" msgid="8109345640668285399">"Kaydet"</string>
@@ -1159,4 +1160,7 @@
     <string name="sound_category_calls_title" msgid="3688531959256239012">"Gelen çağrılar"</string>
     <string name="sound_category_notification_title" msgid="3502115998790286943">"Bildirimler"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"Geri bildirim"</string>
+    <string name="wimax_settings" msgid="1574837328738396794">"4G ayarları"</string>
+    <string name="wimax_settings_summary" msgid="3207355006084135453">"4G ağı ve modemi kurma ve yönetme"</string>
+    <string name="status_wimax_mac_address" msgid="8390791848661413416">"4G MAC adresi"</string>
 </resources>
