--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -584,6 +584,7 @@
     <string name="apn_auth_type_chap" msgid="3369626283789068360">"CHAP"</string>
     <string name="apn_auth_type_pap_chap" msgid="9102343063036134541">"PAP eller CHAP"</string>
     <string name="apn_type" msgid="469613123902220544">"APN-typ"</string>
+    <string name="apn_protocol" msgid="3272222921649348640">"APN-protokoll"</string>
     <string name="menu_delete" msgid="6981294422841124659">"Ta bort APN"</string>
     <string name="menu_new" msgid="3014205883303921729">"Nytt APN"</string>
     <string name="menu_save" msgid="8109345640668285399">"Spara"</string>
@@ -832,7 +833,7 @@
     <string name="auto_replace_summary" msgid="370288728200084466">"Rätta felskrivna ord"</string>
     <string name="auto_caps" msgid="581633131114124121">"Inled med versal"</string>
     <string name="auto_caps_summary" msgid="6358102538315261466">"Första ordet i en mening ska inledas med versal"</string>
-    <string name="auto_punctuate" msgid="4595367243950425833">"Automatisk punkt"</string>
+    <string name="auto_punctuate" msgid="4595367243950425833">"Automatisk interpunktion"</string>
     <string name="hardkeyboard_category" msgid="5957168411305769899">"Inställningar för fysiskt tangentbord"</string>
     <string name="auto_punctuate_summary" msgid="4372126865670574837">"Tryck på blanksteg två gånger om du vill infoga \".\""</string>
     <string name="show_password" msgid="2198798062604049206">"Synliga lösenord"</string>
@@ -1159,4 +1160,7 @@
     <string name="sound_category_calls_title" msgid="3688531959256239012">"Inkommande samtal"</string>
     <string name="sound_category_notification_title" msgid="3502115998790286943">"Aviseringar"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"Signaler"</string>
+    <string name="wimax_settings" msgid="1574837328738396794">"4G-inställningar"</string>
+    <string name="wimax_settings_summary" msgid="3207355006084135453">"Konfigurera och hantera 4G-nätverk och modem"</string>
+    <string name="status_wimax_mac_address" msgid="8390791848661413416">"4G Mac-adress"</string>
 </resources>
