--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2653,4 +2653,8 @@ found in the list of installed applications.</string>
     <string name="wimax_settings">4G settings</string>
     <string name="wimax_settings_summary">Set up &amp; manage 4G network and modem</string>
     <string name="status_wimax_mac_address">4G MAC address</string>
+
+    <string name="additional_system_update_settings_list_item_title"></string>
+    <string name="additional_system_update"></string>
+    <string name="additional_system_update_menu"></string>
 </resources>
